@@ -19,6 +19,7 @@ Version:
 Date:
     Features:
         - (SA) Process accessiblilty of captured spawners, which also fixes biter eggs and subsequent Gleba recipes.
+        - (SA) Add support for the capture-spawner technology trigger.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.2.0
 Date: November 6th 2024
